# fide2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  ver50_epoch23.nnue  ver50_epoch4.nnue
fide2024/: CMakeLists.txt  Makefile  benchmark.cpp  bitbase.cpp  bitboard.cpp  bitboard.h  endgame.cpp  endgame.h  evaluate.cpp  evaluate.h  fide2024.cpp  fide2024.h  main.cpp  material.cpp  material.h  misc.cpp  misc.h  movegen.cpp  movepick.cpp  movepick.h  pawns.cpp  pawns.h  position.cpp  position.h  psqt.cpp  search.cpp  search.h  thread.cpp  thread.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h  ucioption.cpp
fide2024/nnue/: evaluate_nnue.cpp  evaluate_nnue.h  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h
fide2024/nnue/architectures/: a_64_12.h  halfkp_256x2-32-32.h
fide2024/nnue/features/: a.cpp  a.h  feature_set.h  features_common.h  half_kp.cpp  half_kp.h  index_list.h
fide2024/nnue/layers/: affine_transform.h  clipped_relu.h  input_slice.h
fide2024_test/: CMakeLists.txt  fide2024_test.cpp
